# adk-samples

agents/fomc-research/: .env-example  debug_checklist_progress.md  pyproject.toml  test_lemlist_api_direct.py  test_mcp_integration.py
agents/fomc-research/contact_data/: contacts.csv
agents/fomc-research/deployment/: deploy.py
agents/fomc-research/fomc_research/: __init__.py  agent.py  root_agent_prompt.py
agents/fomc-research/fomc_research/tools/: APOLLO_MCP.md  MCP_DOCS.md  lemlist_api_docs.md  lemlist_filters.md  mcp.py  query_lemlist.py  save_contact_to_csv.py
agents/fomc-research/tests/: test_mcp_integration.py
agents/fomc-research/tests/unit/: test_query_lemlist.py  test_tools.py
workflows/find_and_enrich_contact/: FLOW.md  README.md  agent_utils.py  companies_data_1.csv  companies_data_1_enriched.csv  companies_data_2.csv  logging_utils.py  output_mvp.csv  pyproject.toml  requirements.txt  run_enrichment.py  run_fomc_research.py  runner.py  test_agent_utils.py  test_run_enrichment.py  test_run_fomc_research.py
workflows/find_and_enrich_contact/contact_data/: contacts.csv
workflows/find_and_enrich_contact/contact_data/fundraiseup_com_20250430_072401_778586/: contacts.csv
workflows/find_and_enrich_contact/contact_data/jobgether_com_20250430_072401_880996/: contacts.csv
workflows/find_and_enrich_contact/enrichment_workflow/: __init__.py  agent.py
workflows/find_and_enrich_contact/enrichment_workflow/sub_agents/: __init__.py
workflows/find_and_enrich_contact/enrichment_workflow/sub_agents/csv_writer/: __init__.py  agent.py
workflows/find_and_enrich_contact/enrichment_workflow/sub_agents/simple_enricher/: __init__.py  (+1 more)
workflows/find_and_enrich_contact/tests/: run_enrichment_unit.py  run_fomc_research_integrated.py  test_run_enrichment_integration.py
workflows/find_and_enrich_contact/tests/contact_data/: contacts.csv
workflows/find_and_enrich_contact/tests/test_data/: companies_data_1_entry.csv  companies_data_2_entry.csv
(+1 files in other folders)
