[tool.poetry]
name = "find-and-enrich-contact"
version = "0.1.0"
description = "Workflow to run the FOMC research agent"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = ">=1.0.0"
google-adk      = ">=0.0.2"
google-genai    = ">=1.5.0"
pydantic        = ">=2.0.0"
requests        = ">=2.32.0"
# For CSV enrichment
pandas = ">=1.3.0"

# point at your local fomc-research project
fomc-research = { path = "../../agents/fomc-research", develop = true }

[build-system]
requires    = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
